Apply code style fixes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
         run: ./vendor/bin/phpstan analyze
       # Code style checks
       - name: Analyze code style
-        run: ./vendor/bin/php-cs-fixer fix --dry-run
+        run: ./vendor/bin/php-cs-fixer fix --dry-run --diff --ansi
