--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Download PHP
-        run: wget "https://jenkins.pmmp.io/job/PHP-8.0-Aggregate/lastSuccessfulBuild/artifact/${{ env.PHP_ARTIFACT_NAME }}"
+        run: wget "https://github.com/NetherGamesMC/php-build-scripts/releases/download/8.2/Linux.zip"
+      - name: Unzip PHP
+        run: unzip Linux.zip -d ./
       - name: Untar PHP
         run: tar -xzvf ${{ env.PHP_ARTIFACT_NAME }} -C ./
       - name: Install Composer
@@ -24,4 +26,4 @@ jobs:
         run: ./vendor/bin/phpstan analyze
       # Code style checks
       - name: Analyze code style
-        run: ./vendor/bin/php-cs-fixer fix --dry-run --diff --ansi
+        run: ./vendor/bin/php-cs-fixer fix --dry-run --diff
