--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require-dev": {
         "phpstan/phpstan": "1.6.x-dev",
         "friendsofphp/php-cs-fixer": ">=2.19.3",
-        "pocketmine/pocketmine-mp": "dev-stable"
+        "pocketmine/pocketmine-mp": "dev-legacy/pm4"
     },
     "scripts": {
         "analyze": "./vendor/bin/phpstan analyze",
