--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
         run: ${{ env.PHP_BINARY_PATH }} ./vendor/bin/phpstan analyze
       # Code style checks
       - name: Analyze code style
-        run: .${{ env.PHP_BINARY_PATH }} ./vendor/bin/php-cs-fixer fix --dry-run --diff
+        run: ${{ env.PHP_BINARY_PATH }} ./vendor/bin/php-cs-fixer fix --dry-run --diff
