--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
     },
 
     "require": {
-        "php": ">=8.1",
+        "php": ">=8.2",
         "sylvrs/libmarshal": ">=1.4.3",
-        "valiant-bedrock/libscoreboard": ">=0.5.0"
+        "valiant-bedrock/libscoreboard": ">1.0.0"
     },
     "require-dev": {
         "phpstan/phpstan": "1.6.x-dev",
         "friendsofphp/php-cs-fixer": ">=2.19.3",
-        "pocketmine/pocketmine-mp": "dev-legacy/pm4"
+        "pocketmine/pocketmine-mp": "dev-stable"
     },
     "scripts": {
         "analyze": "./vendor/bin/phpstan analyze",
