--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": ">=8.1",
         "sylvrs/libmarshal": ">=1.4.3",
-        "valiant-bedrock/libscoreboard": ">=0.5.0"
+        "valiant-bedrock/libscoreboard": "dev-legacy/pm4"
     },
     "require-dev": {
         "phpstan/phpstan": "1.6.x-dev",
