--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
         }
     },
     "require": {
-        "php": ">=8.1",
+        "php": ">=8.2",
         "sylvrs/libmarshal": ">=1.4.3",
         "valiant-bedrock/libscoreboard": "dev-legacy/pm4"
     },
     "require-dev": {
-        "phpstan/phpstan": "1.6.x-dev",
-        "friendsofphp/php-cs-fixer": ">=2.19.3",
+        "phpstan/phpstan": ">=1.10.25",
+        "friendsofphp/php-cs-fixer": ">=v3.21.1",
         "pocketmine/pocketmine-mp": "dev-legacy/pm4"
     },
     "scripts": {
